--- a/site/style.css
+++ b/site/style.css
@@ -1,8 +1,74 @@
-html {
-    font-family: sans-serif;
+
+body{
+  margin:0px;
+  background-color:black;
+  font-family:sans-serif;
+  animation: background 15s infinite;
 }
 
-body {
-    max-width: 920px;
-    margin: 0 auto;
+#content{
+  background-color:white;
+  margin:20px auto;
+  text-align:center;
+  padding:10px 20px 10px 20px ;
+  border-radius:10px;
+}
+
+#question{
+
+}
+
+.button{
+  background-color:#10ce26;
+  color:white;
+  padding:10px;
+  text-decoration:none;
+  border-radius:5px;
+  transition:0.3s;
+  text-align:right;
+}
+
+.button:hover{
+  background-color:#13af23;
+}
+
+.homepage-content{
+  width:22em;
+}
+
+.question-content{
+  max-width:33em;
+}
+
+.student-content{
+  max-width:33em;
+}
+
+.title{
+  font-size:55pt;
+  animation: color 15s infinite;
+}
+
+p, h1{
+   text-align: center;
+}
+
+@keyframes background {
+    0%   {background-color:#0065b8}
+    25%  {background-color:#0065b8}
+    35%  {background-color:#c58401}
+    60%  {background-color:#c58401}
+    70%  {background-color:#09b930}
+    93%  {background-color:#09b930}
+    100% {background-color:#0065b8}
+}
+
+@keyframes color {
+    0%   {color:#0065b8}
+    25%  {color:#0065b8}
+    35%  {color:#c58401}
+    60%  {color:#c58401}
+    70%  {color:#09b930}
+    93%  {color:#09b930}
+    100% {color:#0065b8}
 }
